Prevent overflow on project's rollover

--- a/sass/partials/_portfolio.scss
+++ b/sass/partials/_portfolio.scss
@@ -22,6 +22,7 @@
     margin-left: 1.5%;
     margin-right: 1.5%;
     border-top: $portfolio-border-width-sm solid $body-bg;
+    overflow: hidden;
     // md (4 cols)
     @media #{$medium-up} {
       width: 24%;
